--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Fuggles&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&family=Fuggles&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zen+Loop:ital@1&display=swap');
 
 :root {
     --color-whidt: white;
     --color-text: rgb(36, 36, 231);
-    --Font-logo: 'Fuggles', cursive;
+    --Font-logo: 'Zen Loop', cursive;
     --font-home: 'Frank Ruhl Libre', serif;
     
 }
