alterei o border-radius

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ h1 {
     background-image: url("../img/img-fundo-04.png");
     background-size: cover;
     background-position: center center;
-    border-radius: 1rem;    
+    border-radius: 10rem 5rem 15rem 10rem;    
 }
 
 
