--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,9 +29,10 @@ html {
     top: 0;
     left: 0;
     right: 0;
-    font-size: 2rem;
+    font-size: 1.7rem;
     background-color: var(--color-whidt);
     color: var(--color-text);
+
 }
 
 .main-menu {
@@ -43,7 +44,7 @@ html {
 
 h1 {
     font-family: var(--Font-logo);
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 .main-menu ul {
@@ -54,7 +55,7 @@ h1 {
     margin-left: 3rem;
 }
 .space-menu {
-    height: 7.7rem;
+    height: 6.8rem;
 }
 
 /*------------------------------------------------------------------------------------*/
@@ -69,10 +70,11 @@ h1 {
 
 .home-container {
     display: grid;
-   justify-content: center;
+    justify-content: center;
     align-items: center;
     grid-template-columns: 40% 25%;
     column-gap: .5rem;
+    margin-top: -1rem;
 }
 
 .text-home {
@@ -91,6 +93,11 @@ h1 {
     font-family: var(--font-home);
 }
 
+.text-home h1 {
+    font-size: 5rem;
+    text-transform: uppercase;
+}
+
 .img-home {
     grid-column: 2 / 3;
     height: 60vh;
@@ -100,8 +107,6 @@ h1 {
     max-width: 100%;
        
 }
-
-
 
 .produto {
     height: 100vh;
