inclui borda no menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ html {
     font-size: 1.7rem;
     background-color: var(--color-whidt);
     color: var(--color-text);
+    border-bottom: .5rem solid rgb(230, 230, 230);
 
 }
 
