--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,13 +89,14 @@ h1 {
     font-size: 3.5rem;
     margin-bottom: 1.5rem;
     text-transform: uppercase;
+    color: var(--color-whidt);
     
 }
 
 .text-home p {
     font-size: 2.3rem;
     font-family: var(--font-home);
-    color: black;
+    color: var(--color-whidt);
 }
 
 .fa-star {
@@ -111,6 +112,7 @@ h1 {
     margin-top: 2.5rem;
     border-radius: 1rem;
     border: none;
+    color: var(--color-whidt);
 }
 
 .link-produto:hover {
