alterei a cor do botao

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ h1 {
     margin-top: 2.5rem;
     border-radius: 1rem;
     border: none;
-    color: var(--color-whidt);
+    color: var(--color-white);
 }
 
 .link-produto:hover {
