--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
     --color-text: rgb(97, 18, 129);
     --Font-logo: 'Poiret One', cursive;
     --font-home: 'Frank Ruhl Libre', serif;
+    --color-img: rgb(226, 155, 155);
     
 }
 
@@ -145,80 +146,100 @@ h1 {
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(4, 18%);
-    grid-template-rows: 10vh 60vh 60vh ;
+    grid-template-rows: 10vh 50vh 50vh ;
     gap: 1rem;
 }
 
 .topo-produto {
     grid-area: 1 / 1 / 1 / 5;
-    border: 1px solid;
+    margin-top: 1rem;
+    background: var(--color-img);
 }
 
 .img1 {
-    grid-area: 3 / 2 / 2 / 3;
+    grid-area: 2 / 1 / 3 / 2;
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 60vh;
-    border: 5px solid;
+    height: 50vh;
+    background: var(--color-img);
+   
 }
 .img2 {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: 2 / 2 / 3 / 3;
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 60vh;
-    border: 1px solid;
+    height: 50vh;
+    background: var(--color-img);
 }
 .img3 {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: 2 / 3 / 3 / 4;
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 60vh;
-    border: 1px solid;
+    height: 50vh;
+    background: var(--color-img);
 }
 .img4 {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: 2 / 4 / 3 / 5;
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 60vh;
-    border: 1px solid;
+    height: 50vh;
+    background: var(--color-img);
 }
 .img5 {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: 3 / 1 / 4 / 2;
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 60vh;
-    border: 1px solid;
+    height: 50vh;
+    background: var(--color-img);
 }
 .img6 {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: 3 / 2 / 4 / 3;
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 60vh;
-    border: 1px solid;
+    height: 50vh;
+    background: var(--color-img);
 }
 .img7 {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: 3 / 3 / 3 / 4;
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 60vh;
-    border: 1px solid;
+    height: 50vh;
+    background: var(--color-img);
 }
 .img8 {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: 3 / 4 / 3 / 5;
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 60vh;
-    border: 1px solid;
+    height: 50vh;
+    background: var(--color-img);
 }
 
 .produto img {
-    width: 80%;
+    width: 70%;
+    padding: 1rem;
+    
+}
+
+.topo-produto {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.produto h2 {
+    font-size: 2rem;
+    margin-top: 2rem;
+}
+
+.produto p {
+    font-size: 2rem;
+    margin-top: 1.7rem;
 }
