--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,7 @@ h1 {
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(4, 18%);
-    grid-template-rows: 10vh 50vh 50vh ;
+    grid-template-rows: 20vh 50vh 50vh ;
     gap: 1rem;
 }
 
@@ -154,6 +154,8 @@ h1 {
     grid-area: 1 / 1 / 1 / 5;
     margin-top: 1rem;
     background: var(--color-img);
+    font-size: 5rem;
+    color: red;
 }
 
 .img1 {
@@ -229,14 +231,14 @@ h1 {
 }
 
 .topo-produto {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-size: 3rem;
 }
 
+
+
 .produto h2 {
-    font-size: 2rem;
-    margin-top: 2rem;
+    font-size: 1.5rem;
+   
 }
 
 .produto p {
