--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&family=Fuggles&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Zen+Loop:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap');
 
 :root {
     --color-white: white;
     --color-text: rgb(97, 18, 129);
     --Font-logo: 'Poiret One', cursive;
     --font-home: 'Frank Ruhl Libre', serif;
+    --font-valor:'PT Serif', serif;
     --color-img: rgb(250, 243, 243);
     
 }
@@ -145,11 +147,10 @@ h1 {
 .produto {
     display: grid;
     justify-content: center;
-    grid-template-columns: repeat(4, 18%);
+    grid-template-columns: repeat(4, 16%);
     grid-template-rows: 10% 43% 43% ;
     height: 100vh;
-    gap: .5rem;
-    background: red;
+    gap: 1rem;
 }
 
 .topo-produto {
@@ -159,7 +160,7 @@ h1 {
 }
 
 .topo-produto h3 {
-    font-size: 3.5rem;
+    font-size: 3.7rem;
 }
 
 .img1 {
@@ -168,7 +169,9 @@ h1 {
     text-align: center;
     width: 100%;
     height: 100%;
-    background: var(--color-img);
+    border: .1rem solid var(--color-text);
+    border-radius: 1rem 6rem 0 2rem;
+    
    
 }
 .img2 {
@@ -177,56 +180,68 @@ h1 {
     text-align: center;
     width: 100%;
     height: 100%;
-    background: var(--color-img);
+    border: .1rem solid var(--color-text);
+    border-radius: 1rem 6rem 0 2rem;
 }
+
 .img3 {
     grid-area: 2 / 3 / 3 / 4;
     align-items: center;
     text-align: center;
     width: 100%;
     height: 100%;
-    background: var(--color-img);
+    border: .1rem solid var(--color-text);
+    border-radius: 1rem 6rem 0 2rem;
 }
+
 .img4 {
     grid-area: 2 / 4 / 3 / 5;
     align-items: center;
     text-align: center;
     width: 100%;
     height: 100%;
-    background: var(--color-img);
+    border: .1rem solid var(--color-text);
+    border-radius: 1rem 6rem 0 2rem;
 }
+
 .img5 {
     grid-area: 3 / 1 / 4 / 2;
     align-items: center;
     text-align: center;
     width: 100%;
     height: 100%;
-    background: var(--color-img);
+    border: .1rem solid var(--color-text);
+    border-radius: 1rem 6rem 0 2rem;
 }
+
 .img6 {
     grid-area: 3 / 2 / 4 / 3;
     align-items: center;
     text-align: center;
     width: 100%;
     height: 100%;
-    background: var(--color-img);
+    border: .1rem solid var(--color-text);
+    border-radius: 1rem 6rem 0 2rem;
 }
+
 .img7 {
     grid-area: 3 / 3 / 3 / 4;
     align-items: center;
     text-align: center;
     width: 100%;
     height: 100%;
-    background: var(--color-img);
+    border: .1rem solid var(--color-text);
+    border-radius: 1rem 6rem 0 2rem;
 }
+
 .img8 {
     grid-area: 3 / 4 / 3 / 5;
     align-items: center;
     text-align: center;
     width: 100%;
     height: 100%;
-    background: var(--color-img);
-    
+    border: .1rem solid var(--color-text);
+    border-radius: 1rem 6rem 0 2rem;
 }
 
 .produto img {
@@ -243,11 +258,13 @@ h1 {
 
 .produto h2 {
     font-size: 1.5rem;
+    color: rgb(82, 82, 82);
    
 }
 
 .produto p {
-    font-size: 2rem;
+    font-size: 2.5rem;
+    font-family: var(--font-valor);
     margin-top: 1.7rem;
 }
 
