--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,7 @@ h1 {
     grid-template-rows: 10vh 55vh 55vh ;
     height: 130vh;
     gap: 1rem;
+    background-color: #e65cbc;
 }
 
 .topo-produto {
