--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,8 @@ html {
 
 
 .menu {
+    display: flex;
+    align-items: center;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -39,19 +41,20 @@ html {
     background-color: var(--color-white);
     color: var(--color-text);
     border-bottom: .5rem solid rgb(230, 230, 230);
+    max-height: 4rem;
 
 }
 
 .main-menu {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    width: 100%;
     padding: 2rem;    
 }
 
 h1 {
     font-family: var(--Font-logo);
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 
 .main-menu ul {
@@ -62,7 +65,7 @@ h1 {
     margin-left: 3rem;
 }
 .space-menu {
-    height: 6.8rem;
+    height: 4rem;
 }
 
 /*------------------------------------------------------------------------------------*/
@@ -78,16 +81,13 @@ h1 {
 .home-container {
     display: grid;
     justify-content: center;
-    align-items: center;
-    grid-template-columns: 40% 35%;
+    grid-template-columns: 45% 50%;
     column-gap: .5rem;
-   
 }
 
 .text-home {
-    grid-column: 1 / 2;
-    height: 50vh;
-    display: block;
+    grid-column: 1 / 2 / 2 / 2;
+    margin-top: 5rem;
    
 }
 
@@ -128,13 +128,15 @@ h1 {
 
 
 .img-home {
-    grid-column: 2 / 3;
-    height: 65vh;
-    background-image: url("../img/img-make.svg");
-    background-size: cover;
-    background-position: center center;
-   
-       
+    grid-column: 1 / 2 / 2 / 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.img-home img {
+    max-width: 85%;
+    max-height: auto;
 }
 
 .visao {
