--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,8 +87,9 @@ h1 {
 
 .text-home {
     grid-column: 1 / 2 / 2 / 2;
-    margin-top: 5rem;
-   
+    margin-top: 8rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .text-home h2 {
@@ -109,15 +110,15 @@ h1 {
     font-size: 3rem;
 }
 
-.link-produto {
-    position: relative;
+.text-home a {
+    display: flex;
+    justify-content: center;
+    max-width: 40%;
+    margin-top: 4rem;
     background: #7263FF;
-    width: 25rem;
-    height: 3rem;
+    padding: .7rem;
     font-size: 1.5rem;
-    margin-top: 2.5rem;
-    border-radius: 1rem;
-    border: none;
+    border-radius: 2rem;
     color: var(--color-white);
 }
 
@@ -137,11 +138,6 @@ h1 {
 .img-home img {
     max-width: 85%;
     max-height: auto;
-}
-
-.visao {
-    height: 100vh;
-    border: 1px solid;
 }
 
 /*-------------------------------------------------------------------------------------------------*/
