alterei a cor da font no css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,9 +71,7 @@ h1 {
 /*------------------------------------------------------------------------------------*/
 
 .home {
-    background-image: url("../img/img-fundo-03.svg");
-    background-size: cover;
-    background-position: center center;
+    background: linear-gradient(#ff7BDE, #9C7BFF) ;
     height: 100vh;
  
 }
@@ -103,7 +101,7 @@ h1 {
 .text-home p {
     font-size: 2.7rem;
     font-family: var(--Font-logo);
-    color: var(--color-white);
+    color: var(#FF9C7B);
 }
 
 .fa-star {
