coloquei uma borda no link para produtos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,10 +118,13 @@ h1 {
     font-size: 1.5rem;
     border-radius: 2rem;
     color: var(--color-white);
+    border: 1px solid;
 }
 
 .link-produto:hover {
     background: #6050f0;
+    
+    
 }
 
 
