melhorei o css do produto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,6 @@ h1 {
 .home {
     background-color: #CA5DFF;
     height: 100vh;
- 
 }
 
 .home-container {
@@ -143,29 +142,37 @@ h1 {
 
 /*-------------------------------------------------------------------------------------------------*/
 
-.produto {
-    display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(4, 16%);
-    grid-template-rows: 10vh 55vh 55vh ;
-    height: 130vh;
-    gap: 1rem;
+.container-produtos {
     background-color: #CA5DFF;
     border-top: .1rem solid var(--color-white);
+    height: 100vh;
+
 }
 
 .topo-produto {
-    grid-area: 1 / 1 / 1 / 5;
-    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+.topo-produto h3{
+    width: 100%;
+    font-size: 3.7rem;
     font-family: var(--Font-logo);
+    margin-top: 2rem;
+    padding: .5rem;
 }
 
-.topo-produto h3 {
-    font-size: 3.7rem;
+.produto {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(5, 16%);
+    grid-template-rows: auto ;
+    gap: 1rem;
+    margin-top: 4rem;
 }
 
 .img1 {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: 1 / 1 / 2 / 2;
     align-items: center;
     text-align: center;
     width: 100%;
@@ -176,7 +183,7 @@ h1 {
    
 }
 .img2 {
-    grid-area: 2 / 2 / 3 / 3;
+    grid-area: 1 / 2 / 2 / 3;
     align-items: center;
     text-align: center;
     width: 100%;
@@ -186,7 +193,7 @@ h1 {
 }
 
 .img3 {
-    grid-area: 2 / 3 / 3 / 4;
+    grid-area: 1 / 3 / 2 / 4;
     align-items: center;
     text-align: center;
     width: 100%;
@@ -196,7 +203,7 @@ h1 {
 }
 
 .img4 {
-    grid-area: 2 / 4 / 3 / 5;
+    grid-area: 1 / 4 / 2 / 5;
     align-items: center;
     text-align: center;
     width: 100%;
@@ -206,7 +213,7 @@ h1 {
 }
 
 .img5 {
-    grid-area: 3 / 1 / 4 / 2;
+    grid-area: 1 / 5 / 2 / 6;
     align-items: center;
     text-align: center;
     width: 100%;
@@ -214,7 +221,7 @@ h1 {
     border: .1rem solid var(--color-text);
     border-radius: 1rem 6rem 0 2rem;
 }
-
+/*
 .img6 {
     grid-area: 3 / 2 / 4 / 3;
     align-items: center;
@@ -244,7 +251,7 @@ h1 {
         border: .1rem solid var(--color-text);
         border-radius: 1rem 6rem 0rem 2rem;
     }
-
+*/
     .produto img {
         width: 80%;
         padding: 1rem;
