--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ h1 {
     margin-top: 4rem;
     background: #7263FF;
     padding: .7rem;
-    font-size: 1.5rem;
+    font-size: 2rem;
     border-radius: 2rem;
     color: var(--color-white);
     border: 1px solid;
@@ -176,9 +176,10 @@ h1 {
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 100%;
-    border: .1rem solid var(--color-text);
-    border-radius: 1rem 6rem 0 2rem;
+    border: .1rem solid var(--color-white);
+    border-radius: 1rem;
+    background-color: rgb(255, 255, 255);
+    height: 35rem;
     
    
 }
@@ -187,9 +188,10 @@ h1 {
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 100%;
-    border: .1rem solid var(--color-text);
-    border-radius: 1rem 6rem 0 2rem;
+    border: .1rem solid var(--color-white);
+    border-radius: 1rem;
+    background-color: rgb(255, 255, 255);
+    height: 35rem;
 }
 
 .img3 {
@@ -197,9 +199,10 @@ h1 {
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 100%;
-    border: .1rem solid var(--color-text);
-    border-radius: 1rem 6rem 0 2rem;
+    border: .1rem solid var(--color-white);
+    border-radius: 1rem;
+    background-color: rgb(255, 255, 255);
+    height: 35rem;
 }
 
 .img4 {
@@ -207,9 +210,10 @@ h1 {
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 100%;
-    border: .1rem solid var(--color-text);
-    border-radius: 1rem 6rem 0 2rem;
+    border: .1rem solid var(--color-white);
+    border-radius: 1rem;
+    background-color: rgb(255, 255, 255);
+    height: 35rem;
 }
 
 .img5 {
@@ -217,9 +221,10 @@ h1 {
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 100%;
-    border: .1rem solid var(--color-text);
-    border-radius: 1rem 6rem 0 2rem;
+    border: .1rem solid var(--color-white);
+    border-radius: 1rem;
+    background-color: rgb(255, 255, 255);
+    height: 35rem;
 }
 /*
 .img6 {
