--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,19 +157,21 @@ h1 {
 }
 .topo-produto h3{
     width: 100%;
+    color: var(--color-white);
     font-size: 3.7rem;
     font-family: var(--Font-logo);
-    margin-top: 2rem;
+    margin-top: 3rem;
+    margin-left: 3rem;
     padding: .5rem;
 }
 
 .produto {
     display: grid;
     justify-content: center;
-    grid-template-columns: repeat(5, 16%);
+    grid-template-columns: repeat(5, 18%);
     grid-template-rows: auto ;
     gap: 1rem;
-    margin-top: 4rem;
+    margin-top: 5rem;
 }
 
 .img1 {
@@ -259,7 +261,7 @@ h1 {
     }
 */
     .produto img {
-        width: 80%;
+        width: 100%;
         padding: 1rem;
     }
 
@@ -268,12 +270,6 @@ h1 {
     width: 78%;
         
     }
-
-    .topo-produto {
-        font-size: 3rem;
-    }
-
-
 
     .produto h2 {
         margin-top: 2rem;
