--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,7 @@ h1 {
 .produto {
     display: grid;
     justify-content: center;
+    align-items: center;
     grid-template-columns: repeat(5, 18%);
     grid-template-rows: auto ;
     gap: 1rem;
@@ -182,7 +183,7 @@ h1 {
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
-    height: 35rem;
+    height: 40rem;
     
    
 }
@@ -194,7 +195,7 @@ h1 {
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
-    height: 35rem;
+    height: 38rem;
 }
 
 .img3 {
@@ -205,7 +206,7 @@ h1 {
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
-    height: 35rem;
+    height: 40rem;
 }
 
 .img4 {
@@ -216,7 +217,7 @@ h1 {
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
-    height: 35rem;
+    height: 37rem;
 }
 
 .img5 {
@@ -227,7 +228,7 @@ h1 {
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
-    height: 35rem;
+    height: 40rem;
 }
 /*
 .img6 {
@@ -263,22 +264,28 @@ h1 {
     .produto img {
         width: 100%;
         padding: 1rem;
+        transition: all 200ms ease-in-out;
     }
 
 
     .produto img:hover {
-    width: 78%;
+        transform: translate(1%, 1%) scale(1.1);
         
     }
 
-    .produto h2 {
-        margin-top: 2rem;
+    .descricao-produto, .valor-produto {
+        width: 100%;
+        position: relative;
+    }
+
+    .descricao-produto h2 {
+        margin-top: 3rem;
         font-size: 1.8rem;
         color: rgb(82, 82, 82);
     
     }
 
-    .produto p {
+    .valor-produto p {
         font-size: 2.5rem;
         font-family: var(--font-valor);
         margin-top: 1.7rem;
