--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,7 +172,19 @@ h1 {
     grid-template-columns: repeat(5, 18%);
     grid-template-rows: auto ;
     gap: 1rem;
-    margin-top: 5rem;
+    margin-top: 4rem;
+}
+
+.list-desejo {
+    font-size: 1.7rem;
+    margin: 0rem;
+    margin-top: .7em;
+    margin-left: 1rem;
+    float: left;
+}
+
+.list-desejo i:hover{
+    color: red;
 }
 
 .img1 {
@@ -183,7 +195,7 @@ h1 {
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
-    height: 40rem;
+    height: 45rem;
     
    
 }
@@ -195,7 +207,7 @@ h1 {
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
-    height: 40rem;
+    height: 45rem;
 }
 
 .img3 {
@@ -206,7 +218,7 @@ h1 {
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
-    height: 40rem;
+    height: 45rem;
 }
 
 .img4 {
@@ -217,7 +229,7 @@ h1 {
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
-    height: 40rem;
+    height: 45rem;
 }
 
 .img5 {
@@ -228,7 +240,7 @@ h1 {
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
-    height: 40rem;
+    height: 45rem;
 }
 /*
 .img6 {
@@ -290,7 +302,7 @@ h1 {
         font-family: var(--font-valor);
         margin-top: 1.7rem;
     }
-    
+
 /*link para compra dos produtos mais vendidos*/
     .link-compra-mais-vendido {
         display: flex;
