--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,7 @@ h1 {
 .container-produtos {
     background-color: #CA5DFF;
     border-top: .1rem solid var(--color-white);
-    height: 100vh;
+    height: 300vh;
 
 }
 
@@ -242,37 +242,7 @@ h1 {
     background-color: rgb(255, 255, 255);
     height: 45rem;
 }
-/*
-.img6 {
-    grid-area: 3 / 2 / 4 / 3;
-    align-items: center;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    border: .1rem solid var(--color-text);
-    border-radius: 1rem 6rem 0 2rem;
-}
 
-.img7 {
-    grid-area: 3 / 3 / 3 / 4;
-    align-items: center;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    border: .1rem solid var(--color-text);
-    border-radius: 1rem 6rem 0 2rem;
-}
-
-.img8 {
-    grid-area: 3 / 4 / 3 / 5;
-    align-items: center;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-        border: .1rem solid var(--color-text);
-        border-radius: 1rem 6rem 0rem 2rem;
-    }
-*/
     .produto img {
         width: 100%;
         padding: 1rem;
@@ -328,6 +298,101 @@ h1 {
     }
 
     /*---------------------------------------------------------------------------------------------*/
+    .container-selecao-produtos {
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        grid-template-columns: repeat(4, 18%);
+        grid-template-rows: 1fr 1fr;
+        gap: 1rem;
+        margin-top: 4rem;
+    }
+
+    .menu-produtos {
+        grid-area: 1 / 1 / 2 / 1;
+        display: flex;
+        border: 1px solid;
+        min-height: 100%;
+    }
+
+    .menu-nav a {
+        font-size: 3rem;
+    }
+
+    .img1-selecao {
+        grid-area: 1 / 2 / 2 / 3;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        border: .1rem solid var(--color-white);
+        border-radius: 1rem;
+        background-color: rgb(255, 255, 255);
+        height: 45rem;
+    }
+    .img2-selecao {
+        grid-area: 1 / 3 / 2 / 4;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        border: .1rem solid var(--color-white);
+        border-radius: 1rem;
+        background-color: rgb(255, 255, 255);
+        height: 45rem;
+    }
+    .img3-selecao {
+        grid-area: 1 / 4 / 2 / 5;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        border: .1rem solid var(--color-white);
+        border-radius: 1rem;
+        background-color: rgb(255, 255, 255);
+        height: 45rem;
+    }
+    .img4-selecao {
+        grid-area: 2 / 2 / 3 / 3;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        border: .1rem solid var(--color-white);
+        border-radius: 1rem;
+        background-color: rgb(255, 255, 255);
+        height: 45rem;
+    }
+    .img5-selecao {
+        grid-area: 2 / 3 / 2 / 4;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        border: .1rem solid var(--color-white);
+        border-radius: 1rem;
+        background-color: rgb(255, 255, 255);
+        height: 45rem;
+    }
+    .img6-selecao {
+        grid-area: 2 / 4 / 2 / 5;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        border: .1rem solid var(--color-white);
+        border-radius: 1rem;
+        background-color: rgb(255, 255, 255);
+        height: 45rem;
+    }
+
+    .container-selecao-produtos img {
+        width: 100%;
+        padding: 1rem;
+        transition: all 200ms ease-in-out;
+    }
+
+
+    .container-selecao-produtos img:hover {
+        transform: translate(1%, 1%) scale(1.1);
+        
+    }
+
+
 
     .container-produtos-2 {
         background-image: url("../img/img-fundo-03.svg");
