--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,13 +311,27 @@ h1 {
     .menu-produtos {
         grid-area: 1 / 1 / 2 / 1;
         display: flex;
+        flex-direction: column;
         border: 1px solid;
         min-height: 100%;
+        background: rgb(216, 211, 211);
+    }
+    .categoria{
+        margin-left: 1rem;
+        margin-top: 1rem;
+        margin-bottom: 1.7rem;
+        font-size: 2.3rem;
+        
     }
 
-    .menu-nav a {
-        font-size: 3rem;
+    .menu-produtos li {
+        margin-top: .1rem;
+        font-size: 2rem;
+        padding: .5rem;
+
     }
+
+ 
 
     .img1-selecao {
         grid-area: 1 / 2 / 2 / 3;
