--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -454,6 +454,7 @@ h1 {
         height: 130vh;       
         width: 100%;
         padding: 0px;
+        margin-top: 0px;
         
     }
     .home {
