--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,7 +196,7 @@ h1 {
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
-    height: 45rem;
+    height: 100%;
     
    
 }
@@ -208,7 +208,7 @@ h1 {
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
-    height: 45rem;
+    height: 100%;
 }
 
 .img3 {
@@ -219,7 +219,7 @@ h1 {
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
-    height: 45rem;
+    height: 100%;
 }
 
 .img4 {
@@ -230,7 +230,7 @@ h1 {
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
-    height: 45rem;
+    height: 100%;
 }
 
 .img5 {
@@ -241,7 +241,7 @@ h1 {
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
-    height: 45rem;
+    height: 100%;
 }
 
     .produto img {
@@ -317,7 +317,7 @@ h1 {
         border: .1rem solid var(--color-white);
         border-radius: 1rem;
         background-color: rgb(255, 255, 255);
-        height: 45rem;
+        height: 100%;
     }
     .img2-selecao {
         grid-area: 1 / 2 / 2 / 3;
@@ -327,7 +327,7 @@ h1 {
         border: .1rem solid var(--color-white);
         border-radius: 1rem;
         background-color: rgb(255, 255, 255);
-        height: 45rem;
+        height: 100%;
     }
     .img3-selecao {
         grid-area: 1 / 3 / 2 / 4;
@@ -337,7 +337,7 @@ h1 {
         border: .1rem solid var(--color-white);
         border-radius: 1rem;
         background-color: rgb(255, 255, 255);
-        height: 45rem;
+        height: 100%;
     }
     .img4-selecao {
         grid-area: 1 / 4 / 2 / 5;
@@ -347,7 +347,7 @@ h1 {
         border: .1rem solid var(--color-white);
         border-radius: 1rem;
         background-color: rgb(255, 255, 255);
-        height: 45rem;
+        height: 100%;
     }
     .img5-selecao {
         grid-area: 2 / 2 / 3 / 3;
@@ -357,7 +357,7 @@ h1 {
         border: .1rem solid var(--color-white);
         border-radius: 1rem;
         background-color: rgb(255, 255, 255);
-        height: 45rem;
+        height: 100%;
     }
     .img6-selecao {
         grid-area: 2 / 3 / 3 / 4;
@@ -367,7 +367,7 @@ h1 {
         border: .1rem solid var(--color-white);
         border-radius: 1rem;
         background-color: rgb(255, 255, 255);
-        height: 45rem;
+        height: 100%;
     }
 
     .container-selecao-produtos img {
@@ -443,7 +443,7 @@ h1 {
 /*--------------------------------------------------------------------------------------------*/
 /*Responsivo*/
 
-@media (max-width: 600px) {
+@media (max-width: 360px) {
       
     .home-container {
         display: block;
@@ -476,19 +476,28 @@ h1 {
         height: 1200VH;
     }
 
+  /* Produtos*/
+
+  
     .produto {
         display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        width: 80%;
-        height: 500vh;
+        flex-direction: column;
+        margin:0 auto;
+        width: 60%;
+
+    }
+    .produto img {
+        width: 60%;
     }
 
-
-    .container-selecao-produtos      {
+    .container-selecao-produtos {
         display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        width: 80%;
+        flex-direction: column;
+        margin:0 auto;
+        width: 60%;
     }
+    .container-selecao-produtos img {
+        width: 70%;
+    }
+
 }
