--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,7 +147,7 @@ h1 {
 .container-produtos {
     background-color: #CA5DFF;
     border-top: .1rem solid var(--color-white);
-    height: 280vh;
+    height: 220vh;
 
 }
 
@@ -171,8 +171,8 @@ h1 {
     justify-content: center;
     align-items: center;
     grid-template-columns: repeat(5, 18%);
-    grid-template-rows: auto ;
-    gap: 1rem;
+    grid-template-rows: 100% ;
+    gap: .5rem;
     margin-top: 4rem;
 }
 
@@ -192,7 +192,7 @@ h1 {
     grid-area: 1 / 1 / 2 / 2;
     align-items: center;
     text-align: center;
-    width: 100%;
+    width: 90%;
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
@@ -204,7 +204,7 @@ h1 {
     grid-area: 1 / 2 / 2 / 3;
     align-items: center;
     text-align: center;
-    width: 100%;
+    width: 85%;
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
@@ -215,7 +215,7 @@ h1 {
     grid-area: 1 / 3 / 2 / 4;
     align-items: center;
     text-align: center;
-    width: 100%;
+    width: 90%;
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
@@ -226,7 +226,7 @@ h1 {
     grid-area: 1 / 4 / 2 / 5;
     align-items: center;
     text-align: center;
-    width: 100%;
+    width: 85%;
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
@@ -237,7 +237,7 @@ h1 {
     grid-area: 1 / 5 / 2 / 6;
     align-items: center;
     text-align: center;
-    width: 100%;
+    width: 90%;
     border: .1rem solid var(--color-white);
     border-radius: 1rem;
     background-color: rgb(255, 255, 255);
@@ -245,7 +245,7 @@ h1 {
 }
 
     .produto img {
-        width: 100%;
+        width: 90%;
         padding: 1rem;
         transition: all 200ms ease-in-out;
     }
@@ -305,15 +305,16 @@ h1 {
         align-items: center;
         grid-template-columns: repeat(4, 18%);
         grid-template-rows: 1fr 1fr;
-        gap: 1rem;
+        gap: .5rem;
         margin-top: 4rem;
+        height: 100vh;
     }
 
     .img1-selecao {
         grid-area: 1 / 1 / 2 / 2;
         align-items: center;
         text-align: center;
-        width: 100%;
+        width: 90%;
         border: .1rem solid var(--color-white);
         border-radius: 1rem;
         background-color: rgb(255, 255, 255);
@@ -323,7 +324,7 @@ h1 {
         grid-area: 1 / 2 / 2 / 3;
         align-items: center;
         text-align: center;
-        width: 100%;
+        width: 90%;
         border: .1rem solid var(--color-white);
         border-radius: 1rem;
         background-color: rgb(255, 255, 255);
@@ -333,7 +334,7 @@ h1 {
         grid-area: 1 / 3 / 2 / 4;
         align-items: center;
         text-align: center;
-        width: 100%;
+        width: 90%;
         border: .1rem solid var(--color-white);
         border-radius: 1rem;
         background-color: rgb(255, 255, 255);
@@ -343,7 +344,7 @@ h1 {
         grid-area: 1 / 4 / 2 / 5;
         align-items: center;
         text-align: center;
-        width: 100%;
+        width: 90%;
         border: .1rem solid var(--color-white);
         border-radius: 1rem;
         background-color: rgb(255, 255, 255);
@@ -353,7 +354,7 @@ h1 {
         grid-area: 2 / 2 / 3 / 3;
         align-items: center;
         text-align: center;
-        width: 100%;
+        width: 90%;
         border: .1rem solid var(--color-white);
         border-radius: 1rem;
         background-color: rgb(255, 255, 255);
@@ -363,7 +364,7 @@ h1 {
         grid-area: 2 / 3 / 3 / 4;
         align-items: center;
         text-align: center;
-        width: 100%;
+        width: 90%;
         border: .1rem solid var(--color-white);
         border-radius: 1rem;
         background-color: rgb(255, 255, 255);
@@ -371,7 +372,7 @@ h1 {
     }
 
     .container-selecao-produtos img {
-        width: 100%;
+        width: 70%;
         padding: 1rem;
         transition: all 200ms ease-in-out;
     }
